# bevy_combat

./: .gitignore  Cargo.toml  README.md  index.html  makefile.toml
assets/: credits.md
assets/art/: big_flash_explosion.aseprite  flash_explosion.aseprite  large_explosion.aseprite  laser.aseprite  laser_blue.aseprite  laser_green.aseprite  muzzle_flare.aseprite  shield.aseprite  shield2.aseprite  small_explosion.aseprite  smoke1.aseprite  tiny_plus_explosion.aseprite
assets/shaders/: ship.wgsl
src/: constants.rs  lib.rs  main.rs  math_util.rs  movement.rs
src/ai/: aggression.rs  idle.rs  mod.rs  movement.rs
src/combat/: attack.rs  damage.rs  effects.rs  evasion.rs  lifetime.rs  mod.rs  mortal.rs  projectile.rs  shields.rs  targets.rs  tools.rs
src/fx/: animated.rs  beams.rs  damage_flash.rs  death.rs  explosion.rs  mod.rs
src/game/: mod.rs
src/materials/: mod.rs
src/templates/: mod.rs
src/templates/ships/: fighters.rs  frigates.rs  mod.rs  rockets.rs  spawn.rs
src/templates/weapons/: mod.rs
web/: index.html
