[package]
name = "bevy_combat"
version = "0.1.0"
authors = []
edition = "2018"
resolver = "2"
repository = "https://github.com/ElliotB256/bevy_combat"
homepage = "https://github.com/ElliotB256/bevy_combat"
description = "A sci-fi battle simulation implemented in the bevy engine."
readme = "README.md"
keywords = ["ecs", "bevy", "scifi", "space", "combat", "simulation"]
license = "MIT License"
authors = ["ElliotB256 <7041164+ElliotB256@users.noreply.github.com>"]

[dependencies]
rand = "0.8"
tracing-wasm = "=0.2.0"
bitflags = "1.3.2"
multimap = "0.8.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png", "bevy_wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.24", features=["x11"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png"] }

bevy_webgl2 = "0.5"
getrandom = { version="0.2", features=["wasm-bindgen"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 's'
lto = "thin"